# quantum-noise-optimizer

./: .gitignore  LICENSE  README.md  mcp_config.json  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bounded_zne_benchmark.py  paper_benchmark.py
docs/: arxiv_outline.md  benchmark_results.txt  long_term_vision.md  master_plan_3track.md  project_state.md  research_notes.md
examples/: demo_full_pipeline.py  demo_ghz.py  demo_gif.py  demo_mcp_workflow.py  demo_physics.py  ibm_quantum_bounded_zne.py  run_real_hardware.py
experiments/: hardware_ready.py
mcp_server/: __init__.py  server.py
paper/: draft_v1.md  generate_figures.py
paper/quantum_noise_intelligence/: .gitignore  Makefile  main.bbl  main.tex  refs.bib
paper/quantum_noise_intelligence/sections/: abstract.tex  background.tex  conclusion.tex  discussion.tex  introduction.tex  methods.tex  results.tex
results/: bounded_zne_benchmark.json  cloud_quantum_results.json  experiment_data.json  hardware_submission_evidence.json  ibm_quantum_results.json  paper_benchmark.json  pending_hardware_baseline.json  pending_hardware_job.json  pending_jobs.json  pyqpanda3_zne_results.json  wukong180_calibration.json
scripts/: hardware_experiment.py  hardware_retry.py  wukong_offpeak.py
src/noise_optimizer/: __init__.py  adaptive_dd_qiskit.py  auto_mitigator.py  benchmark.py  bounded_zne.py  circuit_passes.py  dynamical_decoupling.py  hardware_calibration.py  noise_profiler.py  optimizer.py  qasm.py  readout_mitigator.py  visualization.py  zne.py
tests/: test_all.py  test_bounded_zne.py
