[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-noise-optimizer"
version = "0.1.0"
description = "Noise-Aware Quantum Circuit Optimizer built on pyqpanda3"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "mapleleaflatte03"}]
dependencies = ["pyqpanda3>=0.3.5", "numpy>=1.20"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
